--- a/vercel.json
+++ b/vercel.json
@@ -26,5 +26,11 @@
     "env": {
       "NODE_ENV": "production",
       "VERCEL": "1"
+    },
+    "functions": {
+      "api/upload.js": {
+        "memory": 1024,
+        "maxDuration": 60
+      }
     }
   }
